--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "hadec-on-azel-grid"
+name = "vispy"
 version = "0.0.0"
 description = "Given an earth location, plot lines of constant hour angle and declination on an azimuth-elevation grid"
 readme = "README.md"
@@ -15,3 +15,7 @@ dev = [
     "commitizen>=4.9.1",
     "ruff>=0.14.2",
 ]
+
+[build-system]
+requires = ["uv_build>=0.9.5,<0.10.0"]
+build-backend = "uv_build"
